[project]
name = "pyenerginet"
version = "0.2.2"
authors = [{ name = "Edoardo Simioni", email = "edu230991@gmail.com" }]
description = "A package to extract data from Energinet and Energi Data Service"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.26.4,<1.27",
  "pandas>=2.2.1,<2.3",
  "requests>=2.31.0,<2.32",
]

[project.urls]
Homepage = "https://github.com/edu230991/pyenerginet"
Issues = "https://github.com/edu230991/pyenerginet/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
